almost have authentication working
